solve buggy layout on firefox and desktop

--- a/app/assets/stylesheets/pages/_profile_show.scss
+++ b/app/assets/stylesheets/pages/_profile_show.scss
@@ -97,6 +97,9 @@
   position: absolute;
   top: 8px;
   width: -webkit-fill-available;
+  width: -moz-available;
+  width: fill-available;
+
 }
 
 @media (min-width: 688px) {
